--- a/src/main/resources/templates/partnership_write.html
+++ b/src/main/resources/templates/partnership_write.html
@@ -7,7 +7,288 @@
           <link href="/css/all.css" rel="stylesheet">
 </head>
 <body>
+	<title>입점접수</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<meta name="title" content="메가MGC커피">
+	<meta name="Subject" content="메가커피 커피전문점, 프랜차이즈, 메가엠지씨커피, 빅사이즈 투샷, 가맹안내, 테이크아웃">
+	<meta name="keywords" content="메가커피 커피전문점, 프랜차이즈, 메가엠지씨커피, 빅사이즈 투샷, 가맹안내, 테이크아웃">
+	<meta name="Descript-xion" content="메가커피 커피전문점, 프랜차이즈, 메가엠지씨커피, 빅사이즈 투샷, 가맹안내, 테이크아웃">
+	<meta name="Description" content="메가커피 커피전문점, 프랜차이즈, 메가엠지씨커피, 빅사이즈 투샷, 가맹안내, 테이크아웃">
+	<meta name="Publisher" content="chingooplus">
+	<meta name="Other Agent" content="chingooplus">
+	<meta name="Distribution" content="chingooplus">
+	<meta name="Copyright" content="chingooplus">
+	<meta name="Author" content="chingooplus">
+	<meta name="Robots" content="ALL">
+	<!-- <meta name="Robots" content="noindex"> -->
+	<!-- naver start -->
+	<meta name="naver-site-verification" content="855dc64a4a2ca80c4cb373c1b30a054d1807804e" />
+	<!-- naver end -->
+	<!-- webmaster start -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="메가MGC커피">
+	<meta property="og:site_name" content="메가커피 커피전문점, 프랜차이즈, 메가엠지씨커피, 빅사이즈 투샷, 가맹안내, 테이크아웃">
+	<meta property="og:description" content="메가커피 커피전문점, 프랜차이즈, 메가엠지씨커피, 빅사이즈 투샷, 가맹안내, 테이크아웃">
+	<meta property="og:url" content="https://www.mega-mgccoffee.com/">
+	<meta property="og:image" content="/thumbnail.png?ver=202307100845">
+	<!-- webmaster end -->
+	<!-- app start-->
+	<meta property="al:ios:url" content="applinks://docs">
+	<meta property="al:ios:app_store_id" content="12345">
+	<meta property="al:ios:app_name" content="App Links">
+	<meta property="al:android:url" content="applinks://docs">
+	<meta property="al:android:app_name" content="App Links">
+	<meta property="al:android:package" content="org.applinks">
+	<meta property="al:web:url" content="http://applinks.org/documentation">
 	
+	<link rel="stylesheet" href="/css/header.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="/js/header.js"></script>
+	
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	
+	<!-- app end-->
+	<link rel="canonical" href="https://www.mega-mgccoffee.com/">
+	<link rel="icon" href="/favicon.ico?ver=202307100845" sizes="16x16">
+	<link rel="icon" href="/favicon.ico?ver=202307100845" sizes="32x32">
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;600;700;900&display=swap">
+
+	<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+	<link rel="stylesheet" type="text/css" href="https://img.79plus.co.kr/megahp/common/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" type="text/css" href="/common/css/simple-line-icons.min.css">
+	<link rel="stylesheet" type="text/css" href="/common/css/style.css?ver=202308231505">
+	<link rel="stylesheet" type="text/css" href="https://img.79plus.co.kr/megahp/common/css/animate.css">
+	<link rel="stylesheet" type="text/css" href="/common/css/aos.css?ver=202307100845">
+
+	<script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
+	<script type="text/javascript" src="https://img.79plus.co.kr/megahp/common/js/bootstrap.js"></script>
+	<script type="text/javascript" src="https://img.79plus.co.kr/megahp/common/js/jquery.flexslider.js"></script>
+	<script type="text/javascript" src="https://img.79plus.co.kr/megahp/common/js/jquery.bxslider.js"></script>
+	<script type="text/javascript" src="/common/js/common.js?ver=202307100845"></script>
+
+	<!-- daterangepicker -->
+	<link rel="stylesheet" type="text/css" href="/common/css/daterangepicker.min.css">
+	<script type="text/javascript" src="https://img.79plus.co.kr/megahp/common/js/angular.min.js"></script>
+	<script type="text/javascript" src="https://img.79plus.co.kr/megahp/common/js/angular-messages.min.js"></script>
+	<script type="text/javascript" src="https://img.79plus.co.kr/megahp/common/js/moment.min.js"></script>
+	<script type="text/javascript" src="/common/js/daterangepicker.min.js?ver=202307100845"></script>
+	<script type="text/javascript" src="/common/js/angular-daterangepicker.min.js"></script>
+	<!-- datemdpicker -->
+	<link rel="stylesheet" type="text/css" href="/common/css/mdtimepicker.css?ver=202307100845">
+	<script type="text/javascript" src="/common/js/mdtimepicker.js?ver=202307100845"></script>
+
+	<!-- fullPage -->
+	<script type="text/javascript" src="https://img.79plus.co.kr/megahp/common/js/jquery.fullPage.js"></script>
+
+	<!-- swiper -->
+	<link rel="stylesheet" type="text/css" href="/common/css/swiper.min.css?ver=202307100845">
+	<script type="text/javascript" src="https://img.79plus.co.kr/megahp/common/js/swiper.min.js"></script>
+
+	<script>
+		$(document).ready(function(){
+			$(".datepickertime_wrap input").mdtimepicker();
+			$(".detail_flex_slider_wrap").flexslider({
+				animation: "slide",
+				controlNav: "thumbnails",
+				start: function(){
+					$(".detail_flex_slider_wrap img").css("visibility","visible");
+				},
+			});
+		//head_down_menu start
+			$(".head_wrap .head .head_menu > ul > li").hover(function() {
+				if ( $(".head_menu_wrap").is(".right0") == false ) {
+					$(".head_wrap .head .head_menu > ul > li").removeClass("check");
+					$(this).addClass("check");
+					$(".head_menu_down_menu").stop().slideDown("fast");
+				};
+			}, function() {
+					$(".head_wrap .head .head_menu > ul > li").removeClass("check");
+			});
+
+			$(".head_wrap").hover(function() {
+				$(this).addClass("head_over");
+			}, function() {
+				if ( $(".head_menu_wrap").is(".right0") == false ) {
+					$(this).removeClass("head_over");
+					$(".head_wrap .head .head_menu > ul > li").removeClass("check");
+					$(".head_menu_down_menu").stop().slideUp("fast");
+				}
+			});
+		//head_down_menu end
+		//mobile start
+			$(".mobile_menu_icon").click(function(){
+				$(".head_wrap").addClass("head_over");
+				$(this).toggleClass("mobile_menu_icon_open");
+				if ( $(this).is(".mobile_menu_icon_open") ) {
+					$(".head_menu_wrap").addClass("right0");
+				} else {
+					$(".head_menu_wrap").removeClass("right0");
+				}
+			});
+			$(".head_menu_down").click(function(){
+				$(this).toggleClass("head_menu_down_open");
+				if ( $(this).is(".head_menu_down_open") ) {
+					$(this).next(".head_menu_down_menu").find("ul").slideDown("fast");
+				} else {
+					$(this).next(".head_menu_down_menu").find("ul").slideUp("fast");
+				}
+			});
+		//mobile end
+			cont_gallery_list_img();
+			$(window).resize(function() {
+				$(".head_menu_down_menu > ul").css("display","block");
+				if ( $(window).width() < 760 ) {
+					$(".head_menu_down_menu > ul").css("display","none");
+				};
+				$(".head_menu_down").removeClass("head_menu_down_open");
+				if ( $(window).width() >= 1280 ) {
+					$(".head_wrap").removeClass("head_over");
+					$(".head_menu_wrap").removeClass("right0");
+					$(".mobile_menu_icon").removeClass("mobile_menu_icon_open");
+				};
+				cont_gallery_list_img();
+			});
+		});
+		$(window).scroll( function() {
+			if ( $(document).scrollTop() > $(".cont_wrap").offset() .top ) {
+				$(".head_wrap").addClass("head_fixed");
+			} else{
+				$(".head_wrap").removeClass("head_fixed");
+			}
+		});
+		function cont_gallery_list_img(){
+			$(".cont_gallery_list > ul > li").each(function() {
+				if ( $(this).find(".cont_gallery_list_img").length ) {
+					$(this).find(".cont_gallery_list_img").css("width", $(this).width() );
+				};
+
+				if ( $(this).find(".cont_gallery_list_img_height").length ) {
+					$(this).find(".cont_gallery_list_img_height").css("height", $(this).width() );
+				} else {
+					$(this).find(".cont_gallery_list_img").css("height", $(this).width() );
+				};
+			});
+		};
+
+		function login(){
+			location.href = "/login/?ReturnPage=" + window.location.pathname;
+		};
+		function logout(){
+			location.href = "/login/logout.php?ReturnPage=" + window.location.pathname;
+		};
+	</script>
+</head>
+<body>
+<div class="overlay none"></div>
+	<div class="modal">
+		<div class="modal-dialog">
+			<div class="modal-content"></div>
+		</div>
+	</div>
+	<div class="wrap">
+		<div class="head_wrap">
+			<div class="head">
+				<div class="head_logo">
+					<a href="/">
+						<img src="image/logo.png" class="head_logo_img_fixed">
+					</a>
+				</div>
+
+				<div class="icon_basket">
+					<a href="#">
+						<img src="image/basket.png" class="icon_basket_img_fixed">
+					</a>
+				</div>
+
+				<div class="head_top_nav">
+					<nav class="head-menu-top-nav">
+						<ul>
+							<li class="top-nav01"><a href="/test/login">Sign In</a></li>
+							<li class="top-nav02"><a href="/register">Join Now</a></li>
+							<li class="top-nav03"><a href="#">My Page</a></li>
+						</ul>
+					</nav>
+				</div>
+
+				<div class="head_menu_wrap">
+					<div class="head_menu">
+						<ul>
+							<li>
+								<a href="/brand" class="pc">ABOUT US</a>
+								<a class="m head_menu_down">ABOUT US</a>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/brand">브랜드</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+
+							<li>
+								<a href="/menu" class="pc">MENU</a>
+								<a class="m head_menu_down">MENU</a>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/menu">음료</a><br>
+										</li>
+										<li>
+											<a href="/menu">푸드</a><br>
+										</li>
+									</ul>
+								</div>
+							</li>
+
+							<li>
+								<a href="/store" class="pc">STORE</a>
+								<a class="m head_menu_down">STORE</a>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/store">매장찾기</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+
+							<li>
+								<a href="/partnership" class="pc">PARTNERSHIP</a>
+								<a class="m head_menu_down">PARTNERSHIP	</a>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/partnership">입점문의</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+
+							<li>
+								<a href="/board/QnA" class="pc">NEWS</a>
+								<a class="m head_menu_down">NEWS</a>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/board/QnA">공지사항</a><br>
+										</li>
+										<li>
+											<a href="/board/QnA">Q&A</a><br>
+										</li>
+									</ul>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>	
+	</div>
 <div class="cont">
 			<div class="cont_box db01">
 				<div class="cont_boxs">
@@ -119,28 +400,28 @@
 													창업 희망 지역 <span class="red">*<span>
 																									</span></span></th>
 												<td>
-																											<div class="select_wrap select_wrap2">
-																											<div class="input_select_wrap input_wrap input_wrap2">
+													<div class="select_wrap select_wrap2">
+														<div class="input_select_wrap input_wrap input_wrap2">
 															<select name="customer_tbl_area1" id="customer_tbl_area1">
 																<option value="" selected="" disabled="">시/도</option>
-																																	<option value="서울특별시" data-erp="001">서울특별시</option>
-																																	<option value="부산광역시" data-erp="002">부산광역시</option>
-																																	<option value="대구광역시" data-erp="003">대구광역시</option>
-																																	<option value="인천광역시" data-erp="004">인천광역시</option>
-																																	<option value="광주광역시" data-erp="005">광주광역시</option>
-																																	<option value="대전광역시" data-erp="006">대전광역시</option>
-																																	<option value="울산광역시" data-erp="007">울산광역시</option>
-																																	<option value="세종특별자치시" data-erp="017">세종특별자치시</option>
-																																	<option value="경기도" data-erp="009">경기도</option>
-																																	<option value="강원도" data-erp="008">강원도</option>
-																																	<option value="충청북도" data-erp="015">충청북도</option>
-																																	<option value="충청남도" data-erp="014">충청남도</option>
-																																	<option value="전라북도" data-erp="013">전라북도</option>
-																																	<option value="전라남도" data-erp="012">전라남도</option>
-																																	<option value="경상북도" data-erp="011">경상북도</option>
-																																	<option value="경상남도" data-erp="010">경상남도</option>
-																																	<option value="제주특별자치도" data-erp="016">제주특별자치도</option>
-																															</select>
+																<option value="서울특별시" data-erp="001">서울특별시</option>
+																<option value="부산광역시" data-erp="002">부산광역시</option>
+																<option value="대구광역시" data-erp="003">대구광역시</option>
+																<option value="인천광역시" data-erp="004">인천광역시</option>
+																<option value="광주광역시" data-erp="005">광주광역시</option>
+																<option value="대전광역시" data-erp="006">대전광역시</option>
+																<option value="울산광역시" data-erp="007">울산광역시</option>
+																<option value="세종특별자치시" data-erp="017">세종특별자치시</option>
+																<option value="경기도" data-erp="009">경기도</option>
+																<option value="강원도" data-erp="008">강원도</option>
+																<option value="충청북도" data-erp="015">충청북도</option>
+																<option value="충청남도" data-erp="014">충청남도</option>
+																<option value="전라북도" data-erp="013">전라북도</option>
+																<option value="전라남도" data-erp="012">전라남도</option>
+																<option value="경상북도" data-erp="011">경상북도</option>
+																<option value="경상남도" data-erp="010">경상남도</option>
+																<option value="제주특별자치도" data-erp="016">제주특별자치도</option>
+															</select>
 														</div>
 														<div class="input_select_wrap input_wrap input_wrap2">
 															<select name="customer_tbl_area2" id="customer_tbl_area2">
@@ -150,7 +431,7 @@
 																											</div>
 												</td>
 											</tr>
-																																	<tr>
+											<tr>
 												<th>
 													창업 희망비용
 												</th>
@@ -221,9 +502,56 @@
 								</div>
 							</div>
 						</form>
-					</div>
+			<div class="foot_menu_wrap">
+				<div class="foot_menu">
+					<div class="cont_list">
+					<ul>
+						<li>
+							<a class="modal_open modal_open_policy1">
+								<b>이용약관</b>
+							</a>
+						</li>
+						<li>
+							<a class="modal_open modal_open_policy2">
+								<b>개인정보취급방침</b>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
+		<div class="foot_wrap">
+			<div class="foot">
+				<div class="cont_list cont_list_content">
+					<ul>
+						<li>
+							<div class="cont_text">
+								<div class="cont_list cont_list_m cont_list_m1">
+									<ul>
+										<li>
+											<div class="foot_logo">
+												<img src="image/logo.png">
+											</div>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="cont_text foot_info">
+								<div class="cont_list cont_list_small cont_list_width_m">
+									<ul>
+										<li><b>(주)주식회사 부천대학교</b></li>
+										<li>대표자 박찬호</li>
+										<li>TEL : 032-610-3260</li>
+										<li>경기도 부천시 심곡동 신흥로56번길 25</li>
+										<li>개인정보보호 관리책임자 김영서</li>
+									</ul>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
