--- a/src/main/resources/static/css/information.css
+++ b/src/main/resources/static/css/information.css
@@ -106,8 +106,7 @@
 	.head_fixed{background:#fff !important; box-shadow:0px 0px 5px 0px rgba(0,0,0,0.1) !important;}
 	
 	.head_wrap .head{width:100%; max-width:1280px; margin:0 auto; position:relative; transition: All 0.2s ease; -webkit-transition: All 0.2s ease; -moz-transition: All 0.2s ease; -o-transition: All 0.2s ease;}
-	
-	.head_wrap .head .head_logo{width:300px; position:absolute; top:8px; left:-70px;}
+	.head_wrap .head .head_logo{max-width:280px; position:absolute; top:27px; text-align: center; left: -4%;}
 		.main_body .head_wrap .head .head_logo .head_logo_img{display:inline-block;}
 		.main_body .head_wrap .head .head_logo .head_logo_img_fixed{display:none;}
 		
@@ -375,9 +374,6 @@
 							.head_menu_down_menu > ul > li{float:none;}
 								.head_menu_down_menu > ul > li a:hover{color:#fff;}
 			
-			.head_wrap .head .head_logo{position:relative; margin: 0 auto; left: 2%; text-align:center; max-width: 280px; top: 22px;}
-			.head_wrap .head .head_top_nav{display: none;}
-			.head_wrap .head .head_top_icon{display: none;}
 
 
 	/* 햄버거 버튼  스타일*/
