--- a/src/main/resources/templates/adminUser.html
+++ b/src/main/resources/templates/adminUser.html
@@ -3,14 +3,14 @@
 
 
 <head>
-    <title>마이페이지</title>
+    <title>adminuser</title>
     <link rel="stylesheet" href="/css/MEDIA.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="/css/information.css">
     <link rel="stylesheet" href="/css/information1.css">
-    <link rel="stylesheet" href="/css/information2.css">
-    <link rel="stylesheet" href="/css/mypage.css">
+    <link rel="stylesheet" href="/css/adminuser.css">
+    <link rel="stylesheet" href="/css/adminuser1.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;600;700;900&display=swap">
